--- a/src/scss/layout/loginPage.scss
+++ b/src/scss/layout/loginPage.scss
@@ -1,11 +1,17 @@
 .svg-3 path {
   animation: 20s wave-2 linear infinite alternate;
-  transform: rotate(90deg);
-  height: 100vh;
-  width: 50vw;
 }
 
-section {
+.svg-3 {
+  transform: rotate(90deg) scale(1.5);
+  height: 40vw;
+  width: 100vh;
+  right: 0;
+  top: 0;
+  position: absolute;
+}
+
+.login-screen {
   width: 50vw;
   height: 50vh;
   background-color: white;
