--- a/src/scss/layout/logs.scss
+++ b/src/scss/layout/logs.scss
@@ -1,6 +1,8 @@
 .content {
   display: block;
   width: 100%;
+
+  background-color: #1e1e1e;
 }
 
 .log {
@@ -24,7 +26,8 @@
     article {
       height: 250px;
       width: 100%;
-      background-color: red;
+      background-color: #34404e;
+      border-radius: 1rem;
     }
   }
 }
