--- a/src/scss/layout/logs.scss
+++ b/src/scss/layout/logs.scss
@@ -28,6 +28,11 @@
       width: 100%;
       background-color: #34404e;
       border-radius: 1rem;
+      padding: 1rem;
+
+      p {
+        color: #fff;
+      }
     }
   }
 }
