I changed the logs screen styling and layout

--- a/src/scss/config/colors.scss
+++ b/src/scss/config/colors.scss
@@ -2,5 +2,5 @@ $yellow: #f7b500;
 $blue: #32c5ff;
 $darkBlack: #1e1e1e;
 $slightlyLighterBlack: #242424;
-$lightBlack: #34404e;
+$lightBlack: #0e0e0e;
 $white: #fff;
