--- a/src/scss/layout/logs.scss
+++ b/src/scss/layout/logs.scss
@@ -1,15 +1,17 @@
+@import "../config/colors.scss";
+
 .content {
   display: block;
   width: 100%;
-
-  background-color: #1e1e1e;
+  margin-left: 75px;
+  background-color: $darkBlack;
 }
 
 .log {
   &-header {
     height: 170px;
     width: 100%;
-    background-color: #242424;
+    background-color: $slightlyLighterBlack;
     display: flex;
     .container {
       display: flex;
@@ -19,20 +21,45 @@
   }
   &-container {
     margin-top: 2rem;
+    margin-bottom: 2rem;
     display: grid;
     grid-template-columns: 1fr 1fr;
     column-gap: 1rem;
     row-gap: 1rem;
     article {
-      height: 250px;
       width: 100%;
-      background-color: #34404e;
+      background-color: $lightBlack;
       border-radius: 1rem;
       padding: 1rem;
 
       p {
-        color: #fff;
+        color: $white;
       }
     }
+  }
+}
+
+.card {
+  &-header {
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 0.5rem;
+
+    h3 {
+      color: $white;
+    }
+  }
+  &-extra {
+    color: #fff;
+    span {
+      font-weight: bold;
+    }
+    margin-bottom: 0.5rem;
+  }
+  &-tags {
+    display: flex;
+    justify-content: flex-end;
   }
 }
