--- a/src/scss/navigation/index.scss
+++ b/src/scss/navigation/index.scss
@@ -1,5 +1,4 @@
 nav {
-  display: fixed;
   width: 75px;
   background-color: black;
   color: white;
@@ -9,6 +8,7 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: fixed;
 
   ul {
     list-style-type: none;
