--- a/src/scss/layout/logs.scss
+++ b/src/scss/layout/logs.scss
@@ -4,21 +4,48 @@
   display: block;
   width: 100%;
   margin-left: 75px;
-  background-color: $darkBlack;
+  background-color: $lightBlack;
+  position: relative;
 }
 
 .log {
   &-header {
-    height: 170px;
-    width: 100%;
+    height: 100px;
     background-color: $slightlyLighterBlack;
     display: flex;
+    position: fixed;
+    width: 100%;
+    z-index: 9;
     .container {
       display: flex;
       align-items: center;
       justify-content: space-between;
     }
+
+    .filters {
+      position: absolute;
+      top: 70px;
+      left: 0;
+      width: 100%;
+      height: 250px;
+      background-color: red;
+    }
   }
+
+  &-extra {
+    margin-top: 7rem;
+    display: flex;
+    justify-content: space-between;
+    &:first-of-type {
+      cursor: pointer;
+      user-select: none;
+    }
+    p {
+      margin-top: 2rem;
+      color: $white;
+    }
+  }
+
   &-container {
     margin-top: 2rem;
     margin-bottom: 2rem;
@@ -26,9 +53,12 @@
     grid-template-columns: 1fr 1fr;
     column-gap: 1rem;
     row-gap: 1rem;
+    @media only screen and (max-width: 800px) {
+      grid-template-columns: 1fr;
+    }
     article {
       width: 100%;
-      background-color: $lightBlack;
+      background-color: $darkBlack;
       border-radius: 1rem;
       padding: 1rem;
 
@@ -36,6 +66,13 @@
         color: $white;
       }
     }
+  }
+}
+
+.log-table {
+  tr,
+  th {
+    color: #fff;
   }
 }
 
@@ -62,4 +99,8 @@
     display: flex;
     justify-content: flex-end;
   }
+}
+
+.active {
+  font-weight: bold;
 }
