CREATED A REDUX NOTIFICATION CENTER!!!!

--- a/src/scss/layout/logs.scss
+++ b/src/scss/layout/logs.scss
@@ -22,14 +22,14 @@
       justify-content: space-between;
     }
 
-    .filters {
-      position: absolute;
-      top: 70px;
-      left: 0;
-      width: 100%;
-      height: 250px;
-      background-color: red;
-    }
+    // .filters {
+    //   position: absolute;
+    //   top: 70px;
+    //   left: 0;
+    //   width: 100%;
+    //   height: 250px;
+    //   background-color: red;
+    // }
   }
 
   &-extra {
