--- a/src/scss/layout/runs.scss
+++ b/src/scss/layout/runs.scss
@@ -48,3 +48,98 @@
     // }
   }
 }
+
+@media only screen and (max-width: 760px),
+  (min-device-width: 768px) and (max-device-width: 1024px) {
+  /* Force table to not be like tables anymore */
+  table,
+  thead,
+  tbody,
+  th,
+  td,
+  tr {
+    display: block;
+  }
+
+  table {
+    margin-left: 0 !important;
+  }
+
+  /* Hide table headers (but not display: none;, for accessibility) */
+  thead tr {
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+  }
+
+  tr {
+    border: 1px solid #ccc;
+  }
+
+  td {
+    /* Behave  like a "row" */
+    border: none;
+    border-bottom: 1px solid #eee;
+    position: relative;
+    padding-left: 50%;
+  }
+
+  td:before {
+    /* Now like a table header */
+    /* Top/left values mimic padding */
+    top: 6px;
+    left: 6px;
+    width: 45%;
+    padding-right: 10px;
+    white-space: nowrap;
+    font-weight: bold;
+    text-align: left;
+    margin-right: 1rem;
+  }
+
+  /*
+	Label the data
+	*/
+  td:nth-of-type(1):before {
+    content: "Compare";
+  }
+  td:nth-of-type(2):before {
+    content: "Run number";
+  }
+  td:nth-of-type(3):before {
+    content: "Time 02 start";
+  }
+  td:nth-of-type(4):before {
+    content: "Time 02 end";
+  }
+  td:nth-of-type(5):before {
+    content: "Time TRG start?";
+  }
+  td:nth-of-type(6):before {
+    content: "Run ID";
+  }
+  td:nth-of-type(7):before {
+    content: "Run type";
+  }
+  td:nth-of-type(8):before {
+    content: "Run quality";
+  }
+  td:nth-of-type(9):before {
+    content: "Detectors";
+  }
+  td:nth-of-type(10):before {
+    content: "ArbFLP's'";
+  }
+  td:nth-of-type(11):before {
+    content: "EPN";
+  }
+  td:nth-of-type(12):before {
+    content: "Timeframes";
+  }
+  td:nth-of-type(13):before {
+    content: "B read out";
+  }
+  td:nth-of-type(14):before {
+    content: "B timeframe builder";
+  }
+}
