--- a/src/scss/layout/create-log.scss
+++ b/src/scss/layout/create-log.scss
@@ -11,3 +11,44 @@ header.create-log-header {
     min-height: 20rem;
   }
 }
+
+.tags {
+  margin-top: -63px;
+  padding-bottom: 25px;
+
+  ul {
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 0;
+  }
+
+  li {
+    padding: 0.5rem 1rem;
+    margin: 0.5rem;
+    border-radius: 0.5rem;
+    background-color: white;
+    color: #3a3a3a;
+
+    &:first-child {
+      background-color: orangered;
+      color: white;
+    }
+
+    &:nth-of-type(2) {
+      background-color: purple;
+      color: white;
+    }
+
+    &:nth-of-type(3) {
+      background-color: palevioletred;
+      color: white;
+    }
+
+    &:last-child {
+      background-color: tomato;
+      color: white;
+    }
+  }
+}
