--- a/src/scss/layout/logs.scss
+++ b/src/scss/layout/logs.scss
@@ -8,6 +8,10 @@
   position: relative;
 }
 
+table {
+  margin-left: 0 !important;
+}
+
 .log {
   &-header {
     height: 100px;
@@ -16,6 +20,7 @@
     position: fixed;
     width: 100%;
     z-index: 9;
+    left: 30px;
     .container {
       display: flex;
       align-items: center;
